--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -34,6 +34,25 @@
 
         {{ template "_internal/twitter_cards.html" . }}
         {{ template "_internal/opengraph.html" . }}
+
+	<!-- Extend opengraph meta properties: Specify post image for sharing on facebook. If none are specified fallback to website logo -->
+
+	{{ if and (isset .Params "featuredpath") (ne .Params.featuredpath "") }}
+	    {{ $.Scratch.Set "path" .Params.featuredpath }}
+
+	    {{ if and (isset .Params "featured") (ne .Params.featuredpath "") }}
+		{{ $.Scratch.Set "structType" "page" }}
+		{{ partial "img-path" . }}
+		{{ $path := $.Scratch.Get "path" }}
+
+		<meta property="og:image" content="{{ $path | relURL }}/{{ .Params.featured }}" />
+	    {{ end }}
+
+	{{ else }}
+	<meta property="og:image" content="/img/main/logo.jpg" />
+	
+	{{ end }}
+
         {{ template "_internal/schema.html" . }}
         {{ template "_internal/google_news.html" . }}
 
